fix: mobile x overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -78,10 +78,6 @@ body {
   background: linear-gradient(0deg, #ffffff 22.92%, #1c1c1c 100%);
 }
 
-.bg-hero-gradient {
-  background: linear-gradient(0deg, #2c3238 0%, rgba(52, 58, 64, 0) 21.81%);
-}
-
 .card-backdrop-dark {
   background: rgba(33, 37, 41, 0.49);
   backdrop-filter: blur(14.5px);
@@ -89,6 +85,12 @@ body {
 
 .card-backdrop-white {
   background: rgba(255, 255, 255, 0.62);
+}
+
+.img-04-mask {
+  @media (max-width: 767px) {
+    mask-image: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgb(255, 255, 255) 50%);
+  }
 }
 
 
